@@ -4090,14 +4090,14 @@ namespace aux {
 				--hard_limit;
 				--type_limit;
 #if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_LOGGING
-				t->log_to_all_peers(("AUTO MANAGER STARTING TORRENT: " + t->torrent_file().name()).c_str());
+				t->log_to_all_peers("AUTO MANAGER STARTING TORRENT");
 #endif
 				t->set_allow_peers(true);
 			}
 			else
 			{
 #if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_LOGGING
-				t->log_to_all_peers(("AUTO MANAGER PAUSING TORRENT: " + t->torrent_file().name()).c_str());
+				t->log_to_all_peers("AUTO MANAGER PAUSING TORRENT");
 #endif
 				// use graceful pause for auto-managed torrents
 				t->set_allow_peers(false, true);
